Agregando Audio y Video

--- a/TiendaMusica.Web/TiendaMusica.Web/Web.config
+++ b/TiendaMusica.Web/TiendaMusica.Web/Web.config
@@ -7,16 +7,16 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="ChinookDominio" connectionString="data source=DESKTOP-H5QII24\SQLEXPRESS;initial catalog=Chinook;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ChinookDominio" connectionString="data source=LIM-2CE4170ZNW;initial catalog=Chinook;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  <add key="RouteDebugger:Enabled" value="false" /></appSettings>
+  <add key="RouteDebugger:Enabled" value="true" /></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
