--- a/TiendaMusica.Web/TiendaMusica.Web/TiendaMusica.Web.csproj
+++ b/TiendaMusica.Web/TiendaMusica.Web/TiendaMusica.Web.csproj
@@ -138,8 +138,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilidades\Extensiones.cs" />
     <Compile Include="Utilidades\Imagen.cs" />
+    <Compile Include="Utilidades\AudioVideo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Archivos\mp3\For Those About To Rock.mp3" />
+    <Content Include="Archivos\mp4\videoTest.mp4" />
     <Content Include="Archivos\Thumbnails\default.png" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
