--- a/TiendaMusica.Web/TiendaMusica.Web/Web.config
+++ b/TiendaMusica.Web/TiendaMusica.Web/Web.config
@@ -16,7 +16,14 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  <add key="RouteDebugger:Enabled" value="true" /></appSettings>
+  <add key="RouteDebugger:Enabled" value="false" /></appSettings>
+   <system.webServer>
+  <security>
+    <requestFiltering>
+      <requestLimits maxAllowedContentLength="10485760" />
+    </requestFiltering>
+  </security>
+</system.webServer>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
